checkpoint: Working state before views refactoring
- Migration to svag.pro completed
- All features functional (server.js with inline HTML)
- Gallery, login, landing pages working
- Extension updated with new domain
- This commit serves as safety checkpoint before refactoring views structure

--- a/env.template
+++ b/env.template
@@ -41,9 +41,9 @@ STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
 # FRONTEND
 # =====================================================
 # URL vaší frontend aplikace (pro Stripe redirects)
-# Produkce: https://svag.vercel.app
+# Produkce: https://svag.pro
 # Pro lokální development: http://localhost:3000
-FRONTEND_URL=https://svag.vercel.app
+FRONTEND_URL=https://svag.pro
 
 # =====================================================
 # SERVER
