Fix: Add static route for svag.zip in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
   ],
   "routes": [
     {
+      "src": "/svag\\.zip",
+      "dest": "/svag.zip"
+    },
+    {
       "src": "/(.*)",
       "dest": "server.js"
     }
