feat: Vylepšená detekce SVG v2.0
✨ Nové funkce:
- Podpora pro data URI SVG (base64, URL encoded, UTF-8)
- Podpora pro <object> a <embed> elementy
- Podpora pro SVG sprites s fragmenty (#icon-name)
- Podpora pro CSS mask a -webkit-mask
- Podpora pro CSS clip-path
- Podpora pro pseudo-elementy (::before, ::after)

🔧 Vylepšení:
- Helper funkce decodeSvgDataUri() pro dekódování data URI
- Vylepšená getSvgData() s podporou všech 10 typů SVG
- Vylepšená isSvgElement() s komplexní detekcí
- Vylepšená downloadSvg() s podporou sprite fragmentů
- Vylepšená sendToGallery() se stejnými vylepšeními
- Lepší error handling a debugging logy

📝 Dokumentace:
- Přidána kompletní dokumentace ENHANCED-SVG-DETECTION.md
- Aktualizována verze na 2.0.0 v manifest.json
- Vylepšené konzolové logy pro debugging

🎯 Řeší:
- Problém s nestahováním SVG na některých stránkách
- Pokrytí všech moderních variant SVG implementace

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "svag",
-  "version": "1.0.0",
-  "description": "Stahování a správa SVG ikon z webových stránek",
+  "version": "2.0.0",
+  "description": "Stahování a správa SVG ikon z webových stránek - vylepšená detekce všech SVG typů",
   "permissions": [
     "activeTab",
     "downloads",
