refactor: Přepsání extraction layeru - v1.2.0
🔄 EXTRACTION LAYER REWRITE - Kompletní refactoring pro jednoduchost a robustnost

📝 CO SE ZMĚNILO:

1️⃣ NOVÉ EXTRACTION FUNKCE (content.js):
   - extractShapes(sourceElement) - Extrahuje čisté SVG shape elementy
     * Kopíruje geometry atributy (d, cx, cy, r, atd.)
     * Aplikuje computed fill/stroke z CSS
     * Expanduje <use> elementy inline
     * Rekurzivní zpracování groups (<g>)
     * Odstranění všech class atributů

   - extractCleanSvg(svgElement) - Hlavní extraction funkce
     * Vytvoří nový čistý <svg> element
     * Přidá xmlns a xmlns:xlink namespaces
     * Získá viewBox (z SVG nebo symbolu)
     * Vrátí {content: string, name: string}

2️⃣ ODSTRANĚN STARÝ KÓD:
   - compileSvgShapes() (25 řádků) ❌
   - compileShape() (161 řádků) ❌
   - Celkem odstraněno: 186 řádků složitého kódu

3️⃣ ZJEDNODUŠENÉ FUNKCE:
   - downloadSvg(cleanData, element) - pracuje s {content, name}
     * Odstraněno ~60 řádků složité logiky pro URL/object/embed
     * Vždy dostává čistý content z extractCleanSvg()

   - sendToGallery(cleanData, element) - pracuje s {content, name}
     * Odstraněno ~60 řádků složité logiky
     * Vždy dostává čistý content z extractCleanSvg()

4️⃣ NAPOJENÍ NA BUTTONY (content.js):
   - downloadBtn → extractCleanSvg() → downloadSvg()
   - galleryBtn → extractCleanSvg() → sendToGallery()
   - UI a popup zůstávají beze změny ✅

5️⃣ AKTUALIZACE VERZÍ:
   - manifest.json: 1.1.9 → 1.2.0
   - content.js: Aktualizovány console logy
   - ENHANCED-SVG-DETECTION.md: Nová sekce v1.2.0

6️⃣ TESTOVACÍ SOUBOR:
   - Vytvořen svg-test-cases.html s 20 reálnými příklady
   - Pokryto: buttony, selecty, menu, nested SVG, sprites, CSS třídy, CSS proměnné

📊 STATISTIKY:
- Odstraněno: ~186 řádků starého kódu
- Přidáno: ~157 řádků nového čistého kódu
- Zjednodušeno: ~120 řádků v downloadSvg/sendToGallery
- Čistý zisk: -149 řádků (menší, čitelnější kód)

🎯 KLÍČOVÉ PRINCIPY:
- Jednoduchost nad složitostí
- VŽDY aplikovat compu

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "svag",
-  "version": "1.1.9",
-  "description": "Stahování a správa SVG ikon z webových stránek - kompletní detekce všech SVG typů včetně Shadow DOM a CSS",
+  "version": "1.2.0",
+  "description": "Stahování a správa SVG ikon z webových stránek - nový extraction layer pro čistý SVG bez CSS tříd",
   "permissions": [
     "activeTab",
     "downloads",
