feat: Synchronizace session mezi extensionem a webem
🎯 PROBLÉM:
- Extension a web měly různé session (rozdílné tokeny)
- Logout v extensionu neodhlásil web → zmatení
- Login v extensionu nesynchronizoval s webem
- Gallery zobrazovala jiný účet než extension používal

✅ ŘEŠENÍ - Login synchronizace:
- Po přihlášení v extension popup:
  → Najde všechny otevřené gallery taby
  → Zapíše token do jejich localStorage
  → Pokud je tab na /gallery/login → přesměruje na /gallery
  → Pokud je tab na /gallery → reload pro načtení nových dat

✅ ŘEŠENÍ - Logout synchronizace:
- Po odhlášení v extension popup:
  → Najde všechny otevřené gallery taby
  → Vymaže token z jejich localStorage
  → Pokud je tab na /gallery → přesměruje na /gallery/login

📦 MANIFEST ZMĚNY:
- Přidáno permission: "scripting" (pro chrome.scripting.executeScript)
- Přidáno permission: "tabs" (pro chrome.tabs.query)

🎯 VÝSLEDEK:
- Extension a web vždy sdílejí stejnou session
- Logout v extension = logout všude
- Login v extension = login všude
- Žádné zmatení s různými účty

Verze: 1.2.0

--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,9 @@
   "permissions": [
     "activeTab",
     "downloads",
-    "storage"
+    "storage",
+    "scripting",
+    "tabs"
   ],
   "host_permissions": [
     "<all_urls>"
