revert: Vrácení k merge verzi (09c7a0b) se zachováním nového extraction systému
🎯 STRATEGIE:
- ✅ VRÁTIT všechny soubory k merge commit 09c7a0b
- ✅ KROMĚ content.js (zachován nový extraction system)
- ✅ Upravena verze na 1.2.0 (místo 2.0.0)

📁 VRÁCENÉ SOUBORY (k 09c7a0b - Merge PR #1):
- popup.js, popup.html, popup.css
- background.js
- server.js
- manifest.json (s úpravou verze)

🔍 DŮVOD:
Toto je verze kdy jsme mergovali feature branch do main.
= Poslední stabilní stav před rewrite a auth problémy.
= Gallery a popup fungovaly bez issues.

✅ ZACHOVÁNO:
- content.js → Nový extraction system (extractShapes, extractCleanSvg)

📦 PERMISSIONS:
- Odstraněny 'scripting' a 'tabs' (session sync už není potřeba)
- Zpět na základní: activeTab, downloads, storage

🧪 K OTESTOVÁNÍ:
1. Restart server: npm run dev
2. Reload extension
3. Test: Save to Gallery
4. Test: Download SVG (nový extraction)
5. Test: Icon preview v popup

Verze: 1.2.0

--- a/manifest.json
+++ b/manifest.json
@@ -2,13 +2,11 @@
   "manifest_version": 3,
   "name": "svag",
   "version": "1.2.0",
-  "description": "Stahování a správa SVG ikon z webových stránek - nový extraction layer pro čistý SVG bez CSS tříd",
+  "description": "Stahování a správa SVG ikon z webových stránek - advanced extraction layer",
   "permissions": [
     "activeTab",
     "downloads",
-    "storage",
-    "scripting",
-    "tabs"
+    "storage"
   ],
   "host_permissions": [
     "<all_urls>"
