revert: Vrácení k původní v1.0 se zachováním nového extraction systému
🎯 STRATEGIE:
- ✅ VRÁTIT všechny soubory k commit b0131e2 (v1.0)
- ✅ KROMĚ content.js (zachován nový extraction system)
- ✅ API URL změněno na https://www.svag.pro

📁 VRÁCENÉ SOUBORY (k b0131e2 - v1.0):
- manifest.json → Verze 1.2.0 (updatováno)
- popup.js, popup.html, popup.css
- background.js
- config.js

🔍 DŮVOD:
Vrátit se k ÚPLNĚ původní verzi před všemi:
- SVG detection experimenty
- Auth fix pokusy
- CORS problémy
- Session synchronization

✅ ZACHOVÁNO:
- content.js → Nový extraction system (extractShapes, extractCleanSvg)
  * Advanced SVG path extraction
  * Computed styles application
  * <use> element resolution
  * Clean SVG without CSS classes

🌐 API URL:
- Všechny soubory používají https://www.svag.pro (s www.)
- popup.html, popup.js, config.js, background.js

🎉 VÝSLEDEK:
- Nejjednodušší možná verze (v1.0 základy)
- + Nejnovější extraction system (v1.2.0 feature)
- = Čistý, stabilní kód bez experimentů

📦 VERZE: 1.2.0

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "svag",
   "version": "1.2.0",
-  "description": "Stahování a správa SVG ikon z webových stránek - advanced extraction layer",
+  "description": "Stahování a správa SVG ikon z webových stránek",
   "permissions": [
     "activeTab",
     "downloads",
